--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -22,15 +22,20 @@ jobs:
   - name: generate-env
     plan:
       - aggregate:
-        - {trigger: true, passed: [prepare-project], get: omg-src-in, resource: omg-src-in}
+        - {trigger: true, passed: [run-unit], get: omg-src-in, resource: omg-src-in}
 
-      - task: generate-env
+      - aggregate: 
+        task: generate-env
         file: omg-src-in/ci/tasks/generate-env.yml
         params:
           google_project: {{google_project}}
           google_json_key_data: {{google_json_key_data}}
           google_region: {{google_region}}
           env_file_name: {{env_file_name}}
+
+      - aggregate:
+        - put: omg-env-out
+          params: {file: omg-env-out/{{env_file_name}}}
 
 resources:
   - name: omg-src-in
@@ -41,12 +46,12 @@ resources:
       username: {{source_username}}
       password: {{source_password}}
 
-  - name: omg-env-in
-    type: gcs-resource
-    source:
-      bucket: {{ci_bucket_name}}
-      json_key: {{ci_json_key_date}}
-      versioned_file: {{env_file_name}}
+  # - name: omg-env-in
+  #   type: gcs-resource
+  #   source:
+  #     bucket: {{ci_bucket_name}}
+  #     json_key: {{ci_json_key_date}}
+  #     versioned_file: {{env_file_name}}
 
   - name: omg-env-out
     type: gcs-resource
