--- a/ci/docker-image/tasks/verify-test-image.yml
+++ b/ci/docker-image/tasks/verify-test-image.yml
@@ -3,7 +3,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: {{docker_image}}
+    # TODO: this should be configured
+    repository: jrjohnsongoog/omgci-dev
 inputs:
 - name: omg-src-in
 run:
