--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -64,3 +64,9 @@ resources:
       bucket: {{ci_bucket_name}}
       json_key: {{ci_json_key_date}}
       versioned_file: {{env_file_name}}
+
+resource_types:
+  - name: gcs-resource
+    type: docker-image
+    source:
+      repository: frodenas/gcs-resource
