--- a/ci/tasks/create-infrastruture.yml
+++ b/ci/tasks/create-infrastruture.yml
@@ -5,7 +5,8 @@ image_resource:
   source: {repository: jrjohnsongoog/omgci}
 inputs:
 - name: omg-src-in
-outputs:
 - name: omg-env
+outputs:
+- nme: omg-env
 run:
-  path: omg-src-in/ci/tasks/generate-env.sh
+  path: omg-src-in/ci/tasks/push-tiles.sh
