ci: try to trick yaml parser

--- a/ci/tasks/create-infrastructure.yml
+++ b/ci/tasks/create-infrastructure.yml
@@ -5,7 +5,9 @@ image_resource:
   source: {repository: jrjohnsongoog/omgci}
 inputs:
 - name: omg-src-in
+  path: ""
 - name: omg-env
+  path: ""
 outputs:
 - nme: omg-env
 run:
