ci: correct outputs key

--- a/ci/tasks/create-infrastructure.yml
+++ b/ci/tasks/create-infrastructure.yml
@@ -5,10 +5,8 @@ image_resource:
   source: {repository: jrjohnsongoog/omgci}
 inputs:
 - name: omg-src-in
-  path: ""
 - name: omg-env
-  path: ""
 outputs:
-- nme: omg-env
+- name: omg-env
 run:
   path: omg-src-in/ci/tasks/create-infrastructure.sh
