ci: perform mapping for env in/out at the task level

--- a/ci/tasks/create-infrastructure.yml
+++ b/ci/tasks/create-infrastructure.yml
@@ -6,7 +6,9 @@ image_resource:
 inputs:
 - name: omg-src-in
 - name: omg-env
+  path: omg-env-in
 outputs:
 - name: omg-env
+  path: omg-env-out
 run:
   path: omg-src-in/ci/tasks/create-infrastructure.sh
