--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -53,9 +53,6 @@ jobs:
         params:
           env_file_name: {{env_file_name}}
           env_name: {{env_name}}
-        on_failure: &destroy_infrastructure
-          task: destroy-infrastructure
-          file: omg-src-in/ci/tasks/destroy-infrastructure.yml
       - aggregate:
         - put: omg-env
           params: {file: omg-env/*.tgz}
@@ -72,6 +69,49 @@ jobs:
           env_file_name: {{env_file_name}}
           env_name: {{env_name}}
         on_failure: &destroy_infrastructure
+          task: destroy-infrastructure
+          file: omg-src-in/ci/tasks/destroy-infrastructure.yml
+          params:
+            env_file_name: {{env_file_name}}
+            env_name: {{env_name}}
+
+  - name: deploy-pcf
+    plan:
+      - aggregate:
+        - {trigger: true, passed: [push-tiles], get: omg-src-in, resource: omg-src-in}
+        - {trigger: true, passed: [push-tiles], get: omg-env, resource: omg-env}
+      - aggregate: 
+        task: deploy-pcf
+        file: omg-src-in/ci/tasks/deploy-pcf.yml
+        params:
+          env_file_name: {{env_file_name}}
+          env_name: {{env_name}}
+        on_failure: 
+          aggregate:
+          - *destroy_infrastructure
+          - &destroy_pcf
+            task: destroy-pcf
+            file: omg-src-in/ci/tasks/destroy-pcf.yml
+            params:
+              env_file_name: {{env_file_name}}
+              env_name: {{env_name}}
+
+  - name: destroy-pcf
+    plan:
+      - aggregate:
+        - {trigger: true, passed: [deploy-pcf], get: omg-src-in, resource: omg-src-in}
+        - {trigger: true, passed: [deploy-pcf], get: omg-env, resource: omg-env}
+      - aggregate:
+        - *destroy_pcf
+        on_failure: *destroy_infrastructure
+
+  - name: destroy-infrastructure
+    plan:
+      - aggregate:
+        - {trigger: true, passed: [destroy-pcf], get: omg-src-in, resource: omg-src-in}
+        - {trigger: true, passed: [destroy-pcf], get: omg-env, resource: omg-env}
+      - aggregate:
+        - *destroy_infrastructure
 
 resources:
   - name: omg-src-in
