ci,omg-tf: refactor, reliability improvements
- omg-tf: add sleep between IAM calls. this seems to aid in the
  inconsistent sighting of gcloud errors.
- ci: move duplicate functionality into utils and expose via functions
- ci: consistent input/output of omg-env-{in,out} resource in tasks

--- a/ci/tasks/run-certification.yml
+++ b/ci/tasks/run-certification.yml
@@ -6,5 +6,6 @@ image_resource:
 inputs:
 - name: omg-src-in
 - name: omg-env
+  path: omg-env-in
 run:
   path: omg-src-in/ci/tasks/run-certification.sh
