ci/docker-image: support private key auth
This should have been updated when CI was moved to follow GitHub but was
missed due to low change in this repo.

Change-Id: Ibb5047d5e47f648d8a48385b38f0942070d206a1

--- a/ci/docker-image/pipeline.yml
+++ b/ci/docker-image/pipeline.yml
@@ -43,24 +43,25 @@ resources:
   - name: omg-src-in
     type: git
     source: 
-      uri:      {{source_uri}}
-      branch:   {{source_branch}}
-      username: {{source_username}}
-      password: {{source_password}}
-      paths:    [ci/docker-image]
+      uri:         {{source_uri}}
+      branch:      {{source_branch}}
+      username:    {{source_username}}
+      password:    {{source_password}}
+      private_key: {{source_private_key}}
+      paths:       [ci/docker-image]
 
   - name: docker-image-test
     type: docker-image
     source:
-      email: {{docker_hub_email}}
-      username: {{docker_hub_username}}
-      password: {{docker_hub_password}}
+      email:      {{docker_hub_email}}
+      username:   {{docker_hub_username}}
+      password:   {{docker_hub_password}}
       repository: {{docker_hub_test_repo}}
 
   - name: docker-image
     type: docker-image
     source:
-      email: {{docker_hub_email}}
-      username: {{docker_hub_username}}
-      password: {{docker_hub_password}}
+      email:      {{docker_hub_email}}
+      username:   {{docker_hub_username}}
+      password:   {{docker_hub_password}}
       repository: {{docker_hub_repo}}
