ci/create-infrastructure: authenticate to gcloud
Change-Id: If1ab2645364bc114b61f02b867095501e64cd588

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -65,6 +65,8 @@ jobs:
         task: create-infrastructure
         file: omg-src-in/ci/tasks/create-infrastructure.yml
         params:
+          google_project: {{google_project}}
+          google_json_key_data: {{google_json_key_data}}
           env_file_name: {{env_file_name}}
       - aggregate:
         - put: omg-env
