--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -87,6 +87,8 @@ jobs:
           task: destroy-infrastructure
           file: omg-src-in/ci/tasks/destroy-infrastructure.yml
           params:
+            google_project: {{google_project}}
+            google_json_key_data: {{google_json_key_data}}
             env_file_name: {{env_file_name}}
 
   - name: deploy-pcf
